tests/baselines/reference/verbatimModuleSyntaxNoElision.errors.txt
/b.ts(1,13): error TS1484: 'A' is a type and must be imported using a type-only import when 'verbatimModuleSyntax' is enabled.
/b.ts(5,10): error TS1205: Re-exporting a type when 'verbatimModuleSyntax' is enabled requires using 'export type'.
/b.ts(6,10): error TS1205: Re-exporting a type when 'verbatimModuleSyntax' is enabled requires using 'export type'.
/c.ts(1,10): error TS1485: 'AClass' resolves to a type-only declaration and must be imported using a type-only import when 'verbatimModuleSyntax' is enabled.


==== /a.ts (0 errors) ====
    export const a = 0;
    export type A = typeof a;
    export class AClass {}
    
==== /b.ts (3 errors) ====
    import { a, A, AClass } from "./a";
                ~
!!! error TS1484: 'A' is a type and must be imported using a type-only import when 'verbatimModuleSyntax' is enabled.
    import type { a as aValue, A as AType } from "./a";
    import { type A as AType2 } from "./a";
    
    export { A };
             ~
!!! error TS1205: Re-exporting a type when 'verbatimModuleSyntax' is enabled requires using 'export type'.
    export { A as A2 } from "./a";
             ~~~~~~~
!!! error TS1205: Re-exporting a type when 'verbatimModuleSyntax' is enabled requires using 'export type'.
    export type { A as A3 } from "./a";
    export { type A as A4 } from "./a";
    export type { AClass } from "./a";
    
==== /c.ts (1 errors) ====
    import { AClass } from "./b";
             ~~~~~~
!!! error TS1485: 'AClass' resolves to a type-only declaration and must be imported using a type-only import when 'verbatimModuleSyntax' is enabled.
!!! related TS1377 /b.ts:9:15: 'AClass' was exported here.
    